Add Alexandria and Football scores projects for review

--- a/Football_Scores/app/src/main/res/layout/detail_fragment.xml
+++ b/Football_Scores/app/src/main/res/layout/detail_fragment.xml
@@ -34,6 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
+        android:contentDescription="@string/share_text"
         android:text="@string/share_text"
         android:id="@+id/share_button"
         android:drawableLeft="@android:drawable/ic_menu_share"
