--- a/Football_Scores/app/src/main/res/values/dimens.xml
+++ b/Football_Scores/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="TeamNames">17sp</dimen>
     <dimen name="Score">30sp</dimen>
     <dimen name="League">15sp</dimen>
+    <dimen name="widget_team_name">16dp</dimen>
+    <dimen name="crest_size">65dp</dimen>
 </resources>
