--- a/alexandria/app/src/main/res/values/styles.xml
+++ b/alexandria/app/src/main/res/values/styles.xml
@@ -5,4 +5,7 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <!-- Settings Activity Theme. -->
+    <style name="SettingsTheme" parent="AppTheme"></style>
+
 </resources>
