--- a/Football_Scores/app/src/main/res/layout/detail_fragment.xml
+++ b/Football_Scores/app/src/main/res/layout/detail_fragment.xml
@@ -30,16 +30,19 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp">
         <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:contentDescription="@string/share_text"
-        android:text="@string/share_text"
-        android:id="@+id/share_button"
-        android:drawableLeft="@android:drawable/ic_menu_share"
-        android:paddingLeft="120dp"
-        android:paddingRight="120dp"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:contentDescription="@string/share_text"
+            android:text="@string/share_text"
+            android:id="@+id/share_button"
+            android:drawableStart="@android:drawable/ic_menu_share"
+            android:drawableLeft="@android:drawable/ic_menu_share"
+            android:paddingLeft="@dimen/btn_share_padding"
+            android:paddingRight="@dimen/btn_share_padding"
+            android:paddingStart="@dimen/btn_share_padding"
+            android:paddingEnd="@dimen/btn_share_padding"/>
     </FrameLayout>
 
 </LinearLayout>
