--- a/Football_Scores/app/src/main/res/values/dimens.xml
+++ b/Football_Scores/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="League">15sp</dimen>
     <dimen name="widget_team_name">16dp</dimen>
     <dimen name="crest_size">65dp</dimen>
+    <dimen name="btn_share_padding">120dp</dimen>
 </resources>
